--- a/cloud/helm/job-scraper-app/values-simple.yaml
+++ b/cloud/helm/job-scraper-app/values-simple.yaml
@@ -27,10 +27,10 @@ service:
 
 ingress:
   enabled: true
-  className: "nginx"
+  className: "traefik"
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
-    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    traefik.ingress.kubernetes.io/redirect-entry-point: "https"
   hosts:
     - host: job-search-workflow.draw-me-the-moon.fr
       paths:
