fix: Use values-simple.yaml in ArgoCD application

--- a/cloud/argocd/application.yaml
+++ b/cloud/argocd/application.yaml
@@ -14,7 +14,7 @@ spec:
     path: cloud/helm/job-scraper-app
     helm:
       valueFiles:
-        - values.yaml
+        - values-simple.yaml
 
   destination:
     server: https://kubernetes.default.svc
