fix: Simplify README creation with single printf command

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,23 +77,7 @@ sync-deploy-repo:
     - cp -r ${CI_PROJECT_DIR}/cloud/helm/* helm/
     - mkdir -p argocd
     - cp -r ${CI_PROJECT_DIR}/cloud/argocd/* argocd/
-    - echo "# Job Search Workflow - Deployment Repository" > README.md
-    - echo "" >> README.md
-    - echo "This repository contains the Helm charts and ArgoCD application manifests for the Job Search Workflow application." >> README.md
-    - echo "" >> README.md
-    - echo "**Auto-generated from:** https://gitlab.com/dav.piatek/job-search-workflow" >> README.md
-    - echo "**Last sync:** $(date -u +'%Y-%m-%d %H:%M:%S UTC')" >> README.md
-    - echo "**Commit:** ${CI_COMMIT_SHORT_SHA}" >> README.md
-    - echo "" >> README.md
-    - echo "## Structure" >> README.md
-    - echo "" >> README.md
-    - echo "- 'helm/' - Helm charts for Kubernetes deployment" >> README.md
-    - echo "- 'argocd/' - ArgoCD application manifests" >> README.md
-    - echo "" >> README.md
-    - echo "## Usage" >> README.md
-    - echo "" >> README.md
-    - echo "This repository is automatically synchronized from the main repository." >> README.md
-    - echo "Do not make manual changes here as they will be overwritten." >> README.md
+    - printf "# Job Search Workflow - Deployment Repository\n\nAuto-generated from main repository\nCommit: ${CI_COMMIT_SHORT_SHA}\n" > README.md
     - git add .
     - git commit -m "sync: Update from ${CI_COMMIT_SHORT_SHA}" || echo "No changes to commit"
     - git push --force origin HEAD:main
