--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ docker-build:
     - docker buildx create --use --name builder builder-context || docker buildx use builder
     - docker buildx bake -f cloud/docker/docker-bake.hcl prod --push
 
-update-helm-values:
+sync-deploy-repo:
   stage: update-manifest
   image: alpine:latest
   only:
@@ -48,26 +48,10 @@ update-helm-values:
     - git config --global user.email "ci@gitlab.com"
     - git config --global user.name "GitLab CI"
   script:
-    - echo "Updating Helm values with tag ${CI_COMMIT_SHORT_SHA}"
-    - yq -i ".image.backend.tag = \"${CI_COMMIT_SHORT_SHA}\"" cloud/helm/job-scraper-app/values-simple.yaml
-    - yq -i ".image.frontend.tag = \"${CI_COMMIT_SHORT_SHA}\"" cloud/helm/job-scraper-app/values-simple.yaml
-    - git add cloud/helm/job-scraper-app/values-simple.yaml
-    - git commit -m "ci update image tags to ${CI_COMMIT_SHORT_SHA} [skip ci]"
-    - git push https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.com/dav.piatek/job-search-workflow.git HEAD:main
-
-sync-deploy-repo:
-  stage: update-manifest
-  image: alpine:latest
-  only:
-    - main
-  needs:
-    - update-helm-values
-  before_script:
-    - apk add --no-cache git
-    - git config --global user.email "ci@gitlab.com"
-    - git config --global user.name "GitLab CI"
-  script:
     - |
+      echo "Updating Helm values with tag ${CI_COMMIT_SHORT_SHA}"
+      yq -i ".image.backend.tag = \"${CI_COMMIT_SHORT_SHA}\"" cloud/helm/job-scraper-app/values-simple.yaml
+      yq -i ".image.frontend.tag = \"${CI_COMMIT_SHORT_SHA}\"" cloud/helm/job-scraper-app/values-simple.yaml
       echo "Syncing to deploy repo..."
       mkdir -p /tmp/deploy-repo && cd /tmp/deploy-repo
       git init
@@ -76,7 +60,7 @@ sync-deploy-repo:
       mkdir -p argocd && cp -r ${CI_PROJECT_DIR}/cloud/argocd/* argocd/
       echo "# Deployment Repository" > README.md
       git add .
-      git commit -m "sync: ${CI_COMMIT_SHORT_SHA}" || echo "No changes"
+      git commit -m "sync: ${CI_COMMIT_SHORT_SHA}"
       git push --force origin HEAD:main
 
 # Deploy to Kubernetes via ArgoCD
@@ -86,7 +70,6 @@ deploy:
   only:
     - main
   needs:
-    - update-helm-values
     - sync-deploy-repo
   script:
     - echo "Triggering ArgoCD deployment"
