--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,10 @@
-# DISABLED TO SAVE CI RESOURCES
 name: CI
 
 on:
   push:
-    branches: [ disabled-never-run ]
+    branches: [ main, develop ]
   pull_request:
-    branches: [ disabled-never-run ]
+    branches: [ main, develop ]
 
 jobs:
   lint:
@@ -183,7 +182,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: cloud/docker/Dockerfile.backend-simple
+          file: cloud/docker/Dockerfile.backend
           push: false
           tags: job-scraper-backend:${{ github.sha }}
           cache-from: type=gha
@@ -193,23 +192,23 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: cloud/docker/Dockerfile.frontend-simple
+          file: cloud/docker/Dockerfile.frontend
           push: false
           tags: job-scraper-frontend:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-  trigger-gitlab-cd:
-    name: Trigger GitLab CD
+  push-to-gitlab:
+    name: Push to GitLab
     runs-on: ubuntu-latest
     needs: [docker-build]
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     steps:
-      - name: Trigger GitLab Pipeline
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Push to GitLab
         run: |
-          curl -X POST \
-            -F token=${{ secrets.GITLAB_TRIGGER_TOKEN }} \
-            -F ref=main \
-            -F "variables[SOURCE]=github" \
-            -F "variables[GITHUB_SHA]=${{ github.sha }}" \
-            ${{ secrets.GITLAB_TRIGGER_URL }}
+          git remote add gitlab https://oauth2:${{ secrets.GITLAB_PUSH_TOKEN }}@gitlab.com/dav.piatek/job-search-workflow.git || true
+          git push gitlab main
