--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -201,7 +201,7 @@ jobs:
   push-to-gitlab:
     name: Push to GitLab
     runs-on: ubuntu-latest
-    needs: [docker-build]
+    needs: [lint, test-backend, test-frontend, build, docker-build]
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     steps:
       - uses: actions/checkout@v4
