--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -198,8 +198,8 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-  push-to-gitlab:
-    name: Push to GitLab
+  sync-to-gitlab:
+    name: Sync to GitLab
     runs-on: ubuntu-latest
     needs: [lint, test-backend, test-frontend, build, docker-build]
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
