--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,77 +131,77 @@ jobs:
       - name: Run frontend tests
         run: pnpm --filter frontend test
 
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-    needs: [lint, test-backend, test-frontend]
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-
-      - name: Get pnpm store directory
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-
-      - name: Setup pnpm cache
-        uses: actions/cache@v4
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-
-      - name: Install dependencies
-        run: pnpm install
-
-      - name: Build backend
-        run: pnpm --filter backend build
-
-      - name: Build frontend
-        run: pnpm --filter frontend build
-
-  docker-build:
-    name: Build Docker Images
-    runs-on: ubuntu-latest
-    needs: [build]
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build backend image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: cloud/docker/Dockerfile.backend
-          push: false
-          tags: job-scraper-backend:${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-      - name: Build frontend image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: cloud/docker/Dockerfile.frontend
-          push: false
-          tags: job-scraper-frontend:${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+#  build:
+#    name: Build
+#    runs-on: ubuntu-latest
+#    needs: [lint, test-backend, test-frontend]
+#    steps:
+#      - uses: actions/checkout@v4
+#
+#      - name: Setup pnpm
+#        uses: pnpm/action-setup@v4
+#
+#      - name: Setup Node.js
+#        uses: actions/setup-node@v4
+#        with:
+#          node-version: '18'
+#
+#      - name: Get pnpm store directory
+#        shell: bash
+#        run: |
+#          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+#
+#      - name: Setup pnpm cache
+#        uses: actions/cache@v4
+#        with:
+#          path: ${{ env.STORE_PATH }}
+#          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+#          restore-keys: |
+#            ${{ runner.os }}-pnpm-store-
+#
+#      - name: Install dependencies
+#        run: pnpm install
+#
+#      - name: Build backend
+#        run: pnpm --filter backend build
+#
+#      - name: Build frontend
+#        run: pnpm --filter frontend build
+#
+#  docker-build:
+#    name: Build Docker Images
+#    runs-on: ubuntu-latest
+#    needs: [build]
+#    steps:
+#      - uses: actions/checkout@v4
+#
+#      - name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v3
+#
+#      - name: Build backend image
+#        uses: docker/build-push-action@v5
+#        with:
+#          context: .
+#          file: cloud/docker/Dockerfile.backend
+#          push: false
+#          tags: job-scraper-backend:${{ github.sha }}
+#          cache-from: type=gha
+#          cache-to: type=gha,mode=max
+#
+#      - name: Build frontend image
+#        uses: docker/build-push-action@v5
+#        with:
+#          context: .
+#          file: cloud/docker/Dockerfile.frontend
+#          push: false
+#          tags: job-scraper-frontend:${{ github.sha }}
+#          cache-from: type=gha
+#          cache-to: type=gha,mode=max
 
   sync-to-gitlab:
     name: Sync to GitLab
     runs-on: ubuntu-latest
-    needs: [lint, test-backend, test-frontend, build, docker-build]
+    needs: [lint, test-backend, test-frontend]
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     steps:
       - uses: actions/checkout@v4
