--- a/.github/workflows/sync-gitlab.yml
+++ b/.github/workflows/sync-gitlab.yml
@@ -31,5 +31,6 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global core.hooksPath /dev/null
-          git remote add gitlab https://oauth2:${GITLAB_TOKEN}@gitlab.com/dav.piatek/job-search-workflow.git
+          git remote add gitlab https://gitlab.com/dav.piatek/job-search-workflow.git
+          git config --global url."https://oauth2:${GITLAB_TOKEN}@gitlab.com/".insteadOf "https://gitlab.com/"
           git push gitlab main --force
