--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,134 +11,66 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  lint:
-    name: Lint
+  dummy:
+    name: Dummy job for testing sync
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - run: echo "CI passed"
 
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-
-      - name: Get pnpm store directory
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-
-      - name: Setup pnpm cache
-        uses: actions/cache@v4
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-
-      - name: Install dependencies
-        run: pnpm install
-
-      - name: Lint backend
-        run: pnpm --filter backend lint
-
-      - name: Lint frontend
-        run: pnpm --filter frontend lint
-
-  test-backend:
-    name: Test Backend
-    runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres:16-alpine
-        env:
-          POSTGRES_DB: jobscraper_test
-          POSTGRES_USER: admin
-          POSTGRES_PASSWORD: admin123
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-
-      - name: Get pnpm store directory
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-
-      - name: Setup pnpm cache
-        uses: actions/cache@v4
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-
-      - name: Install dependencies
-        run: pnpm install
-
-      - name: Run backend tests
-        run: pnpm --filter backend test
-        env:
-          DATABASE_URL: postgresql://admin:admin123@localhost:5432/jobscraper_test
-
-      - name: Run backend e2e tests
-        run: pnpm --filter backend test:e2e
-        env:
-          DATABASE_URL: postgresql://admin:admin123@localhost:5432/jobscraper_test
-
-  test-frontend:
-    name: Test Frontend
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-
-      - name: Get pnpm store directory
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-
-      - name: Setup pnpm cache
-        uses: actions/cache@v4
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-
-      - name: Install dependencies
-        run: pnpm install
-
-      - name: Run frontend tests
-        run: pnpm --filter frontend test
-
-#  build:
-#    name: Build
+##  lint:
+##    name: Lint
+##    runs-on: ubuntu-latest
+##    steps:
+#      - uses: actions/checkout@v4
+#
+#      - name: Setup pnpm
+#        uses: pnpm/action-setup@v4
+#
+#      - name: Setup Node.js
+#        uses: actions/setup-node@v4
+#        with:
+#          node-version: '18'
+#
+#      - name: Get pnpm store directory
+#        shell: bash
+#        run: |
+#          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+#
+#      - name: Setup pnpm cache
+#        uses: actions/cache@v4
+#        with:
+#          path: ${{ env.STORE_PATH }}
+#          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+#          restore-keys: |
+#            ${{ runner.os }}-pnpm-store-
+#
+#      - name: Install dependencies
+#        run: pnpm install
+#
+#      - name: Lint backend
+#        run: pnpm --filter backend lint
+#
+#      - name: Lint frontend
+#        run: pnpm --filter frontend lint
+#
+#  test-backend:
+#    name: Test Backend
 #    runs-on: ubuntu-latest
-#    needs: [lint, test-backend, test-frontend]
+#    services:
+#      postgres:
+#        image: postgres:16-alpine
+#        env:
+#          POSTGRES_DB: jobscraper_test
+#          POSTGRES_USER: admin
+#          POSTGRES_PASSWORD: admin123
+#        ports:
+#          - 5432:5432
+#        options: >-
+#          --health-cmd pg_isready
+#          --health-interval 10s
+#          --health-timeout 5s
+#          --health-retries 5
+#
 #    steps:
 #      - uses: actions/checkout@v4
 #
@@ -166,53 +98,113 @@ jobs:
 #      - name: Install dependencies
 #        run: pnpm install
 #
-#      - name: Build backend
-#        run: pnpm --filter backend build
+#      - name: Run backend tests
+#        run: pnpm --filter backend test
+#        env:
+#          DATABASE_URL: postgresql://admin:admin123@localhost:5432/jobscraper_test
 #
-#      - name: Build frontend
-#        run: pnpm --filter frontend build
+#      - name: Run backend e2e tests
+#        run: pnpm --filter backend test:e2e
+#        env:
+#          DATABASE_URL: postgresql://admin:admin123@localhost:5432/jobscraper_test
 #
-#  docker-build:
-#    name: Build Docker Images
+#  test-frontend:
+#    name: Test Frontend
 #    runs-on: ubuntu-latest
-#    needs: [build]
 #    steps:
 #      - uses: actions/checkout@v4
 #
-#      - name: Set up Docker Buildx
-#        uses: docker/setup-buildx-action@v3
+#      - name: Setup pnpm
+#        uses: pnpm/action-setup@v4
 #
-#      - name: Build backend image
-#        uses: docker/build-push-action@v5
+#      - name: Setup Node.js
+#        uses: actions/setup-node@v4
 #        with:
-#          context: .
-#          file: cloud/docker/Dockerfile.backend
-#          push: false
-#          tags: job-scraper-backend:${{ github.sha }}
-#          cache-from: type=gha
-#          cache-to: type=gha,mode=max
+#          node-version: '18'
 #
-#      - name: Build frontend image
-#        uses: docker/build-push-action@v5
+#      - name: Get pnpm store directory
+#        shell: bash
+#        run: |
+#          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+#
+#      - name: Setup pnpm cache
+#        uses: actions/cache@v4
 #        with:
-#          context: .
-#          file: cloud/docker/Dockerfile.frontend
-#          push: false
-#          tags: job-scraper-frontend:${{ github.sha }}
-#          cache-from: type=gha
+#          path: ${{ env.STORE_PATH }}
+#          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+#          restore-keys: |
+#            ${{ runner.os }}-pnpm-store-
+#
+#      - name: Install dependencies
+#        run: pnpm install
+#
+#      - name: Run frontend tests
+#        run: pnpm --filter frontend test
+#
+##  build:
+##    name: Build
+##    runs-on: ubuntu-latest
+##    needs: [lint, test-backend, test-frontend]
+##    steps:
+##      - uses: actions/checkout@v4
+##
+##      - name: Setup pnpm
+##        uses: pnpm/action-setup@v4
+##
+##      - name: Setup Node.js
+##        uses: actions/setup-node@v4
+##        with:
+##          node-version: '18'
+##
+##      - name: Get pnpm store directory
+##        shell: bash
+##        run: |
+##          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+##
+##      - name: Setup pnpm cache
+##        uses: actions/cache@v4
+##        with:
+##          path: ${{ env.STORE_PATH }}
+##          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+##          restore-keys: |
+##            ${{ runner.os }}-pnpm-store-
+##
+##      - name: Install dependencies
+##        run: pnpm install
+##
+##      - name: Build backend
+##        run: pnpm --filter backend build
+##
+##      - name: Build frontend
+##        run: pnpm --filter frontend build
+##
+##  docker-build:
+##    name: Build Docker Images
+##    runs-on: ubuntu-latest
+##    needs: [build]
+##    steps:
+##      - uses: actions/checkout@v4
+##
+##      - name: Set up Docker Buildx
+##        uses: docker/setup-buildx-action@v3
+##
+##      - name: Build backend image
+##        uses: docker/build-push-action@v5
+##        with:
+##          context: .
+##          file: cloud/docker/Dockerfile.backend
+##          push: false
+##          tags: job-scraper-backend:${{ github.sha }}
+##          cache-from: type=gha
+##          cache-to: type=gha,mode=max
+##
+##      - name: Build frontend image
+##        uses: docker/build-push-action@v5
+##        with:
+##          context: .
+##          file: cloud/docker/Dockerfile.frontend
+##          push: false
+##          tags: job-scraper-frontend:${{ github.sha }}
+##          cache-from: type=gha
 #          cache-to: type=gha,mode=max
 
-  sync-to-gitlab:
-    name: Sync to GitLab
-    runs-on: ubuntu-latest
-    needs: [lint, test-backend, test-frontend]
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Push to GitLab
-        run: |
-          git remote add gitlab https://oauth2:${{ secrets.GITLAB_PUSH_TOKEN }}@gitlab.com/dav.piatek/job-search-workflow.git || true
-          git push gitlab main
