--- a/cloud/docker/Dockerfile.frontend
+++ b/cloud/docker/Dockerfile.frontend
@@ -1,5 +1,8 @@
 FROM node:20-alpine AS builder
 
+ARG COMMIT_SHA=dev
+ENV VITE_COMMIT_SHA=${COMMIT_SHA}
+
 WORKDIR /app
 
 # Install pnpm (cached layer - changes rarely)
